--- a/app/src/main/res/layout/fragment_create_map.xml
+++ b/app/src/main/res/layout/fragment_create_map.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/colorDivider"
     tools:context=".fragment.CreateMapFragment">
 
     <LinearLayout
@@ -17,11 +18,7 @@
             android:id="@+id/btnCreateMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/create_map"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/create_map" />
 
         <Button
             android:id="@+id/btnSaveMap"
